fixed scrollbar issue

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -41,6 +41,13 @@ body{
 	border-radius: 12px;
 }
 
+@media only screen and (max-width: 680px){
+  ::-webkit-scrollbar{
+    /* height: 0; */
+    width: 0;
+  }
+}
+
 .flex-container {
   display: flex;
   justify-content: center;
